[package]
name = "scrapetoon"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/RoloEdits/scrapetoon"

[dependencies]
clap = {version = "4", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
webtoon = "0.9.0"
csv = "1"
anyhow = { version = "1" }
serde = {version = "1", features = ["derive"]}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
