[package]
name = "line_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project_core = { path = "../project_core" }
cli_core = { path = "../cli_core" }
regex = "1.7.0"
scraper = "0.13.0"
chrono = "0.4.23"
hashlink = "0.8.1"