[package]
name = "line_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project_core = { path = "../project_core" }
cli_core = { path = "../cli_core" }
regex = { workspace = true }
scraper = { workspace = true}
chrono = { workspace = true}
tokio = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
crossbeam = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
mockall = { workspace = true }