[package]
name = "lore-olympus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { workspace = true }
tokio = { workspace = true }
scraper = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }
project_core = { path = "../project_core" }
line_core = { path = "../line_core" }
cli_core = { path = "../cli_core" }
