[package]
name = "scrapetoon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
project_core = { path = "../project_core" }
line_core = { path = "../line_core" }
cli_core = { path = "../cli_core"}
csv = { workspace = true }
hashlink = "0.8.1"
clap = { workspace = true }
tokio = { workspace = true }
static_assertions = { workspace = true }