[package]
name = "scrapetoon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webtoons = { path = "../webtoons" }
cli = { path = "../cli" }
clap = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }