[package]
name = "tower-of-god"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = { workspace = true }
tokio = { workspace = true }
scraper = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }
static_assertions = { workspace = true }
webtoons = { path = "../../webtoons" }
cli = { path = "../../cli" }
anyhow = { workspace = true }
