[package]
name = "true-beauty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
webtoons = { path = "../../webtoons" }
cli = { path = "../../cli" }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
